# multi-agent-researcher

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  demo.py  multi_reactagent.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_react_system.py  test_search_debug.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: agent-architecture-diagram.md  agent-design-analysis.md  agent-prompt-templates.md  agent-system-summary.md  arch.md  building-effective-agents-summary.md  implementation-guide.md  implementation-progress.md  integrated-insights-comparison.md  key_design_insights.md  multi-agent-design-philosophy.md  multi-agent-patterns-analysis.md  multi-agent-research-system-analysis.md  react-agent-architecture.md  reference_design_analysis.md  technical-implementation-plan.md  true_multi_agent_roadmap.md
examples/: report_cc_workflow_agent.md  report_invest_cc_react_agent.md  report_invest_simple_v2.md  report_pm_simple.md  usage_examples.py
examples/configs/: research_profiles.py
patterns/agents/: README.md
src/: __init__.py  cli.py  main.py  react_research_system.py  simple_react_system.py
src/agents/: base.py  citation_agent.py  citations_agent_tool.py  lead_agent.py  research_subagent_tool.py  subagent.py  true_lead_agent_v2.py
src/config/: __init__.py  agent_config.py
src/graph/: nodes.py  state.py  workflow.py
tests/: README.md  __init__.py  run_system_tests.py
(+39 files in other folders)
