[tool.poetry]
name = "deep-research"
version = "0.1.0"
description = "Multi-agent research system using LangGraph and Anthropic Claude"
authors = ["Deep Research Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.39.0"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langsmith = "^0.1.0"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
httpx = "^0.25.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
tiktoken = "^0.5.0"
tenacity = "^8.2.0"
loguru = "^0.7.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]  # Skip hardcoded password tests and shell usage

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"